--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 </div>
 <div class="loseContainer">
   <h3 class="loseMessage">ごめんなさい..</h3>
+  <img class="loseImg" src="img/mickey.png">
 </div>
 <div id="toys">
 </div>
