--- a/win.html
+++ b/win.html
@@ -23,6 +23,17 @@
       <h1><a class="logo" href="index.html">TOKYO Disney REAORT</a></h1>
     </header>
     <div id="main">
+      <div class="ticketContainer">
+        <img class="ticketImage" src="img/pink_back.jpg">
+        <div class="ticketTextarea">
+          <div class="ticketQR"></div>
+          <img class="ticketCharacter" src="img/pink.png">
+          <p class="ticketType">1デーパスポート</p>
+          <h3 class="ticketName">まいはまたろう</h3>
+          <p class="ticketAdult">大人</p>
+          <p class="ticketDate">2021.2.20</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
