--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 </svg>
 <div class="winContainer">
   <h3 class="winMessage">おめでとうございます！</h3>
-  <a class="winButton" href="win.html">チケットの発行</a>
+  <div id="winLink"></div>
 </div>
 <div class="loseContainer">
-  <h3 class="loseMessage">ごめんなさい..</h3>
+  <h3 class="loseMessage">ざんねん...</h3>
   <img class="loseImg" src="img/mickey.png">
 </div>
 <div id="toys">
