--- a/blue.html
+++ b/blue.html
@@ -23,7 +23,7 @@
       <h1><a class="logo" href="index.html">TOKYO Disney REAORT</a></h1>
     </header>
     <div id="main">
-      <div class="ticketContainer">
+      <div class="ticketContainer ticketContainerBlue">
         <img class="ticketImage" src="img/blue_back.jpg">
         <div class="ticketTextarea">
           <div class="ticketQR"></div>
