--- a/purple.html
+++ b/purple.html
@@ -23,7 +23,7 @@
       <h1><a class="logo" href="index.html">TOKYO Disney REAORT</a></h1>
     </header>
     <div id="main">
-      <div class="ticketContainer">
+      <div class="ticketContainer ticketContainerPurple">
         <img class="ticketImage" src="img/purple_back.jpg">
         <div class="ticketTextarea">
           <div class="ticketQR"></div>
