--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="revised" content="2018-08-05" scheme="YYYY-MM-DD">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name=”robots” content=”noindex” />
     <title>Arcade Claw Machine</title>
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
