--- a/green.html
+++ b/green.html
@@ -28,7 +28,7 @@
         <img class="ticketImage" src="img/gree_back.jpg">
         <div class="ticketTextarea">
           <div class="ticketQR"></div>
-          <img class="ticketCharacter" src="img/pink.png">
+          <img class="ticketCharacter" src="img/green.png">
           <p class="ticketType">1デーパスポート</p>
           <h3 class="ticketName">まいはまたろう</h3>
           <p class="ticketAdult">大人</p>
