--- a/green.html
+++ b/green.html
@@ -25,7 +25,7 @@
     </header>
     <div id="main">
       <div class="ticketContainer ticketContainerGreen">
-        <img class="ticketImage" src="img/gree_back.jpg">
+        <img class="ticketImage" src="img/green_back.jpg">
         <div class="ticketTextarea">
           <div class="ticketQR"></div>
           <img class="ticketCharacter" src="img/green.png">
